# basic_jwt_auth_with_mongodb

./: README.md  pyproject.toml
basic_jwt_auth_with_mongodb/: database.py  main.py  settings.py
basic_jwt_auth_with_mongodb/apis/: auth.py
